--- a/webstat-tsclustering/tsclustering/data.ipynb
+++ b/webstat-tsclustering/tsclustering/data.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/media/clem/data/Documents/src/sandbox/webstat-tsclustering/.venv/lib/python3.8/site-packages/tslearn/bases/bases.py:15: UserWarning: h5py not installed, hdf5 features will not be supported.\n",
+      "Install h5py to use hdf5 features: http://docs.h5py.org/\n",
+      "  warn(h5py_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import http.client\n",
@@ -14,17 +24,9 @@
     "from tslearn.clustering import TimeSeriesKMeans, silhouette_score\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CLIENT_ID = \"aa94502c-1518-4c17-9fba-88f7e6580baf\"\n",
-    "API_URL = \"api.webstat.banque-france.fr\""
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "from tsclustering.data import get_dataset_list, get_series_by_dataset_name, get_serie_observations, get_dataset_observations"
    ]
   },
   {
@@ -32,39 +34,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Récupération de la liste des datasets"
+    "# Récupération de la liste des datasets\n",
+    "\n",
+    "Enregistrement `catalogue.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset_dict \u001b[39m=\u001b[39m get_dataset_list()\n\u001b[0;32m----> 3\u001b[0m dataset_names \u001b[39m=\u001b[39m [dataset[\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m dataset_dict]\n\u001b[1;32m      5\u001b[0m annuaire_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dataset_dict)\n\u001b[1;32m      6\u001b[0m annuaire_df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mcatalogue.csv\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset_dict \u001b[39m=\u001b[39m get_dataset_list()\n\u001b[0;32m----> 3\u001b[0m dataset_names \u001b[39m=\u001b[39m [dataset[\u001b[39m\"\u001b[39;49m\u001b[39mname\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39mfor\u001b[39;00m dataset \u001b[39min\u001b[39;00m dataset_dict]\n\u001b[1;32m      5\u001b[0m annuaire_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(dataset_dict)\n\u001b[1;32m      6\u001b[0m annuaire_df\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mcatalogue.csv\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
    "source": [
-    "conn = http.client.HTTPSConnection(API_URL)\n",
+    "dataset_dict = get_dataset_list()\n",
     "\n",
-    "headers = {\n",
-    "    'X-IBM-Client-Id': CLIENT_ID,\n",
-    "    'accept': \"application/json\"\n",
-    "    }\n",
+    "print(dataset_dict)\n",
+    "dataset_names = [dataset[\"name\"] for dataset in dataset_dict]\n",
     "\n",
-    "conn.request(\"GET\", \"/webstat-fr/v1/catalogue?format=json\", headers=headers)\n",
-    "\n",
-    "res = conn.getresponse()\n",
-    "data = res.read()\n",
-    "\n",
-    "annuaire_dict = data.decode(\"utf-8\")\n",
-    "annuaire_dict = json.loads(annuaire_dict)\n",
-    "dataset_names = [dataset[\"name\"] for dataset in annuaire_dict]"
+    "annuaire_df = pd.DataFrame(dataset_dict)\n",
+    "annuaire_df.to_csv(\"catalogue.csv\", index=False)\n",
+    "annuaire_df.to_markdown(buf=\"catalogue.md\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(annuaire_dict).to_markdown(buf=\"catalogue.md\", index=False)"
+    "annuaire_df = pd.read_csv(\"catalogue.csv\")\n",
+    "dataset_names = annuaire_df[\"DatasetName\"].tolist()"
    ]
   },
   {
@@ -139,37 +150,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Récupération de la liste des séries d'un dataset"
+    "# Get dataset observations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'httpCode': '429',\n",
+       " 'httpMessage': 'Too Many Requests',\n",
+       " 'moreInformation': 'Rate Limit exceeded'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_series_by_dataset_name(dataset_name):\n",
-    "    conn = http.client.HTTPSConnection(API_URL)\n",
-    "\n",
-    "    conn.request(\"GET\", \n",
-    "                 f\"/webstat-fr/v1/catalogue/{dataset_name}?format=json\", \n",
-    "                 headers={\n",
-    "                    'X-IBM-Client-Id': CLIENT_ID,\n",
-    "                    'accept': \"application/json\"\n",
-    "                })\n",
-    "\n",
-    "    try:\n",
-    "        res = conn.getresponse()\n",
-    "        data = res.read()\n",
-    "\n",
-    "        raw_result = data.decode(\"utf-8\")\n",
-    "        if \"The document has moved\" in raw_result:\n",
-    "            return []\n",
-    "        else:\n",
-    "            datasets_available = json.loads(raw_result)\n",
-    "            return datasets_available\n",
-    "    except Exception as e:\n",
-    "        raise Exception(dataset_name, raw_result, e.args)"
+    "get_dataset_observations(dataset_names[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Récupération de la liste des séries d'un dataset"
    ]
   },
   {
@@ -210,77 +221,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "series_dict = {}"
+    "series_cache = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m     series \u001b[39m=\u001b[39m series_dict[dataset_name]\n\u001b[1;32m     15\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 16\u001b[0m     series \u001b[39m=\u001b[39m get_series_by_dataset_name(dataset_name)\n\u001b[1;32m     17\u001b[0m     series_dict[dataset_name] \u001b[39m=\u001b[39m series\n\u001b[1;32m     19\u001b[0m \u001b[39mfor\u001b[39;00m serie \u001b[39min\u001b[39;00m series:\n",
-      "Cell \u001b[0;32mIn[29], line 12\u001b[0m, in \u001b[0;36mget_series_by_dataset_name\u001b[0;34m(dataset_name)\u001b[0m\n\u001b[1;32m      4\u001b[0m conn\u001b[39m.\u001b[39mrequest(\u001b[39m\"\u001b[39m\u001b[39mGET\u001b[39m\u001b[39m\"\u001b[39m, \n\u001b[1;32m      5\u001b[0m              \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m/webstat-fr/v1/catalogue/\u001b[39m\u001b[39m{\u001b[39;00mdataset_name\u001b[39m}\u001b[39;00m\u001b[39m?format=json\u001b[39m\u001b[39m\"\u001b[39m, \n\u001b[1;32m      6\u001b[0m              headers\u001b[39m=\u001b[39m{\n\u001b[1;32m      7\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39mX-IBM-Client-Id\u001b[39m\u001b[39m'\u001b[39m: CLIENT_ID,\n\u001b[1;32m      8\u001b[0m                 \u001b[39m'\u001b[39m\u001b[39maccept\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mapplication/json\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m             })\n\u001b[1;32m     11\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 12\u001b[0m     res \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39;49mgetresponse()\n\u001b[1;32m     13\u001b[0m     data \u001b[39m=\u001b[39m res\u001b[39m.\u001b[39mread()\n\u001b[1;32m     15\u001b[0m     raw_result \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m/usr/lib/python3.8/http/client.py:1348\u001b[0m, in \u001b[0;36mHTTPConnection.getresponse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1346\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1347\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1348\u001b[0m         response\u001b[39m.\u001b[39;49mbegin()\n\u001b[1;32m   1349\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mConnectionError\u001b[39;00m:\n\u001b[1;32m   1350\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclose()\n",
-      "File \u001b[0;32m/usr/lib/python3.8/http/client.py:316\u001b[0m, in \u001b[0;36mHTTPResponse.begin\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    314\u001b[0m \u001b[39m# read until we get a non-100 response\u001b[39;00m\n\u001b[1;32m    315\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 316\u001b[0m     version, status, reason \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_read_status()\n\u001b[1;32m    317\u001b[0m     \u001b[39mif\u001b[39;00m status \u001b[39m!=\u001b[39m CONTINUE:\n\u001b[1;32m    318\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/lib/python3.8/http/client.py:277\u001b[0m, in \u001b[0;36mHTTPResponse._read_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    276\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_read_status\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m--> 277\u001b[0m     line \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfp\u001b[39m.\u001b[39;49mreadline(_MAXLINE \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m), \u001b[39m\"\u001b[39m\u001b[39miso-8859-1\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    278\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(line) \u001b[39m>\u001b[39m _MAXLINE:\n\u001b[1;32m    279\u001b[0m         \u001b[39mraise\u001b[39;00m LineTooLong(\u001b[39m\"\u001b[39m\u001b[39mstatus line\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m/usr/lib/python3.8/socket.py:669\u001b[0m, in \u001b[0;36mSocketIO.readinto\u001b[0;34m(self, b)\u001b[0m\n\u001b[1;32m    667\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m    668\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 669\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sock\u001b[39m.\u001b[39;49mrecv_into(b)\n\u001b[1;32m    670\u001b[0m     \u001b[39mexcept\u001b[39;00m timeout:\n\u001b[1;32m    671\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_timeout_occurred \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/lib/python3.8/ssl.py:1241\u001b[0m, in \u001b[0;36mSSLSocket.recv_into\u001b[0;34m(self, buffer, nbytes, flags)\u001b[0m\n\u001b[1;32m   1237\u001b[0m     \u001b[39mif\u001b[39;00m flags \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1238\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1239\u001b[0m           \u001b[39m\"\u001b[39m\u001b[39mnon-zero flags not allowed in calls to recv_into() on \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m\n\u001b[1;32m   1240\u001b[0m           \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m)\n\u001b[0;32m-> 1241\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mread(nbytes, buffer)\n\u001b[1;32m   1242\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1243\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mrecv_into(buffer, nbytes, flags)\n",
-      "File \u001b[0;32m/usr/lib/python3.8/ssl.py:1099\u001b[0m, in \u001b[0;36mSSLSocket.read\u001b[0;34m(self, len, buffer)\u001b[0m\n\u001b[1;32m   1097\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1098\u001b[0m     \u001b[39mif\u001b[39;00m buffer \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1099\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sslobj\u001b[39m.\u001b[39;49mread(\u001b[39mlen\u001b[39;49m, buffer)\n\u001b[1;32m   1100\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1101\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sslobj\u001b[39m.\u001b[39mread(\u001b[39mlen\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# création d'un graph des datasets de webstat\n",
-    "import networkx as nx\n",
-    "\n",
-    "from bokeh.io import output_file, show\n",
-    "from bokeh.models import (BoxZoomTool, Circle, HoverTool,\n",
-    "                          MultiLine, Plot, Range1d, ResetTool)\n",
-    "from bokeh.palettes import Spectral4\n",
-    "from bokeh.plotting import from_networkx\n",
-    "\n",
-    "graph = nx.DiGraph()\n",
-    "\n",
     "for dataset_name in dataset_names:\n",
-    "    if dataset_name in series_dict:\n",
-    "        series = series_dict[dataset_name]\n",
+    "    if dataset_name in series_cache:\n",
+    "        series = series_cache[dataset_name]\n",
     "    else:\n",
     "        series = get_series_by_dataset_name(dataset_name)\n",
-    "        series_dict[dataset_name] = series\n",
+    "        series_cache[dataset_name] = series\n",
     "\n",
     "    for serie in series:\n",
     "        serie_key = serie[\"seriesKey\"]\n",
     "        serie_dataset = serie[\"dataset\"]\n",
-    "        serie_title = serie[\"title\"]\n",
-    "\n",
-    "        graph.add_edges_from([(serie_dataset, serie_title if serie_title is not None else serie_key)])\n",
-    "\n",
-    "graph_renderer = from_networkx(graph, nx.spring_layout, scale=1, center=(0, 0))\n",
-    "\n",
-    "graph_renderer.node_renderer.glyph = Circle(size=15, fill_color=Spectral4[0])\n",
-    "graph_renderer.edge_renderer.glyph = MultiLine(line_color=\"edge_color\", line_alpha=0.8, line_width=1)\n",
-    "\n",
-    "plot = Plot(width=1000, height=1000, x_range=Range1d(-1.1, 1.1), y_range=Range1d(-1.1, 1.1))\n",
-    "plot.renderers.append(graph_renderer)\n",
-    "\n",
-    "output_file(\"interactive_graphs.html\")\n",
-    "\n",
-    "# show(plot)\n",
-    "\n",
-    "# plt.figure(figsize=(12,12)) \n",
-    "# nx.draw(graph, with_labels=True, node_size=60,font_size=8)\n"
+    "        serie_title = serie[\"title\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save series meta to `series_metas.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series_cache.to_csv(\"series_metas.csv\")"
    ]
   },
   {
@@ -289,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_series = sum(list(series_dict.values()), [])"
+    "all_series = sum(list(series_cache.values()), [])"
    ]
   },
   {
@@ -506,42 +487,6 @@
    "source": [
     "# Récupération des observations d'un dataset\n",
     "Cet API requête l'ensemble des données d'un dataset. Certains datasets contiennent plusieurs centaines de milliers d'observations. En cas d'erreur (timeout) ou de temps de chargement excessif, il sera nécessaire de restreindre le nombre d'observations demandé à l'aide des différents paramètres ou d'utiliser l'API de requête par séries."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def get_serie_observations(dataset, serie_key, start_period=\"2000-01-01\", end_period=\"2019-12-31\"):\n",
-    "    querystr_dict = {\n",
-    "        \"format\": \"json\",\n",
-    "        \"detail\": \"dataonly\",\n",
-    "        \"startPeriod\" : start_period,\n",
-    "        \"endPeriod\" : end_period,\n",
-    "        # \"lastNObservations\": last_observations=1,\n",
-    "        # \"firstNObservations\": first_observations=1,\n",
-    "    }\n",
-    "    querystr = urlencode(querystr_dict)\n",
-    "\n",
-    "    headers = {\n",
-    "        'X-IBM-Client-Id': CLIENT_ID,\n",
-    "        'accept': \"application/json\"\n",
-    "    }\n",
-    "\n",
-    "    conn = http.client.HTTPSConnection(API_URL)\n",
-    "    conn.request(\"GET\", f\"/webstat-fr/v1/data/{dataset}/{serie_key}?{querystr}\", headers=headers)\n",
-    "\n",
-    "    res = conn.getresponse()\n",
-    "    data = res.read()\n",
-    "\n",
-    "    serie_observations = json.loads(data.decode(\"utf-8\"))\n",
-    "    if \"seriesObs\" in serie_observations:\n",
-    "        return serie_observations[\"seriesObs\"][0]\n",
-    "    else:\n",
-    "        return None"
    ]
   },
   {
