fix typo coding_test

--- a/coding-test/coding_test/datascience/decision-trees.ipynb
+++ b/coding-test/coding_test/datascience/decision-trees.ipynb
@@ -104,7 +104,7 @@
     "A node's gini attribute measures its impurity\n",
     "* if gini=0, the node is pure, all training instances belong to the same class\n",
     "\n",
-    "To compute the gini score $G_i$ of the $i^{th}$ note:\n",
+    "To compute the gini score $G_i$ of the $i^{th}$ node:\n",
     "$$\n",
     "G_i = 1 - \\sum_{k=1}^n p_{i,k}^2\n",
     "$$\n",
@@ -121,7 +121,7 @@
     "\n",
     "A Decision Tree can estimate the probability that an instance belongs to a particular class k.\n",
     "\n",
-    "First it traverses the tree to find the leaf node for this instance, and then it returns the ratio fo training instances of class k in this node.\n",
+    "First it traverses the tree to find the leaf node for this instance, and then it returns the ratio of training instances of class k in this node.\n",
     "\n",
     "The estimated probabilities would be identical anywhere else in the bottom-right leaf node, if the petals were 6cm long and 1.5cm wide (or 5cm long and 1.5cm wide), even though it seems obvious that it would most likely be an Iris virginica in this case."
    ]
@@ -168,13 +168,13 @@
     "\n",
     "The CART algorithm is a greedy algorithm, it greedily searches for an optimum split at the top level, then repeats the process at each subsequent level. It does not check wether or not the split will lead to the lowest possible impurity several levels down. A greedy algorithm often produces a solution that's reasonably good but not guaranted to be optimal.\n",
     "\n",
-    "Finding the optimal tree is known to be an $NP-Complete$ problem: it requires O(exp(m)) time, making the problem intractable even for small training sets.\n",
+    "Finding the optimal tree is known to be an $NP-Complete$ problem: it requires $ \\Theta (\\exp(m))$ time, making the problem intractable even for small training sets.\n",
     "\n",
     "## Computational Complexity\n",
     "\n",
-    "Making prediction requires traversing the Decision Tree from the root to a leaf. Decision Trees generally are approximately balanced, so traversing the DT requires going through roughly O(log(m)) nodes. Since each node only requires checking the value of one feature, the overall prediction complexity is 0(log(m)), independent of the number of features.\n",
+    "Making prediction requires traversing the Decision Tree from the root to a leaf. Decision Trees generally are approximately balanced, so traversing the DT requires going through roughly $ \\Theta (\\log(m))$ nodes. Since each node only requires checking the value of one feature, the overall prediction complexity is $ \\Theta (\\log(m))$, independent of the number of features.\n",
     "\n",
-    "The training algorithm compares all features (or less if max_features is set) on all samples at each node. Comparing all features on all samples at each node results in a training complexity of O(n m log(m)). For small training sets, less than a few thousand instances, Scikit-Learn can speed up training by presorting the data, (set presort=True), but doing that slows down considerably for larger training set.\n",
+    "The training algorithm compares all features (or less if max_features is set) on all samples at each node. Comparing all features on all samples at each node results in a training complexity of $ \\Theta (n m \\log(m))$. For small training sets, less than a few thousand instances, Scikit-Learn can speed up training by presorting the data, (set presort=True), but doing that slows down considerably for larger training set.\n",
     "\n",
     "## Gini Impurity or Entropy?\n",
     "\n",
