--- a/coding-test/coding_test/sql/sql_be_the_outlier.ipynb
+++ b/coding-test/coding_test/sql/sql_be_the_outlier.ipynb
@@ -430,7 +430,9 @@
     "        SELECT or1.CreatedAt, or1.CustomerId, or1.OrderId\n",
     "        FROM Orders AS or1\n",
     "        INNER JOIN \n",
-    "            (SELECT MIN(CreatedAt) as FirstOrderAt, CustomerId FROM Orders GROUP BY CustomerId) AS or2\n",
+    "            (SELECT MIN(CreatedAt) as FirstOrderAt, CustomerId \n",
+    "                FROM Orders \n",
+    "                GROUP BY CustomerId) AS or2\n",
     "            ON or1.CustomerId = or2.CustomerId\n",
     "            AND or1.CreatedAt = or2.FirstOrderAt\n",
     "        ORDER BY or1.CreatedAt\n",
@@ -534,7 +536,7 @@
     "\n",
     "For example, window functions are great when you need to aggregate without losing the individual line item information. Window functions do not output aggregates as a single row for the group but rather as a column to the original line items that you have in the table.\n",
     "\n",
-    "CTEs are gret to make your queries computationally less expensive.\n",
+    "CTEs are great to make your queries computationally less expensive.\n",
     "\n",
     "For example, with a query involving a WHERE and JOIN clause, SQL will process the JOIN first and then the WHERE clause. In cases where the table size is quite large, JOIN on all rows will be an expensive computation, especially if you are planning to remove those rows anyawy with the WHERE clause. In such cases, using CTE is computationally more effective where you can apply the WHERE clause first and then do the JOIN in the following statement."
    ]
