--- a/webstat-tsclustering/tsclustering/data.ipynb
+++ b/webstat-tsclustering/tsclustering/data.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/media/clem/data/Documents/src/sandbox/webstat-tsclustering/.venv/lib/python3.8/site-packages/tslearn/bases/bases.py:15: UserWarning: h5py not installed, hdf5 features will not be supported.\n",
+      "/home/clem/Documents/source/sandbox/webstat-tsclustering/.venv/lib/python3.8/site-packages/tslearn/bases/bases.py:15: UserWarning: h5py not installed, hdf5 features will not be supported.\n",
       "Install h5py to use hdf5 features: http://docs.h5py.org/\n",
       "  warn(h5py_msg)\n"
      ]
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        " 'FATSO',\n",
        " 'SEC',\n",
        " 'SI_AI',\n",
-       " 'FTID',\n",
+       " 'FTI',\n",
        " 'ESA',\n",
        " 'OFC',\n",
        " 'CEFIT',\n",
@@ -133,10 +133,10 @@
        " 'GST',\n",
        " 'DET',\n",
        " 'CONS',\n",
-       " 'BSI1']"
+       " 'BSI']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,38 +185,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m sts_series \u001b[39m=\u001b[39m get_series_by_dataset_name(\u001b[39m\"\u001b[39m\u001b[39mSTS\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m sts_series[\u001b[39m0\u001b[39;49m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "sts_series = get_series_by_dataset_name(\"STS\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'seriesKey': 'STS.M.BE.Y.TOVV.NS4701.4.000',\n",
-       " 'dataset': 'STS',\n",
-       " 'title': 'Belgique, Indice de ventes au détail (CVS-CJO)',\n",
-       " 'titleCompl': 'Belgique - Indice de ventes au détail, Cvs-cjo',\n",
-       " 'extTitle': 'Belgium, Retail trade turnover index (SA-WDA)',\n",
-       " 'natTitle': 'Belgium - Total Turnover Index, deflated, Retail trade excluding fuel, except of motor vehicles and motorcycles - NACE Rev2; Eurostat; Working day and seasonally adjusted',\n",
-       " 'sourceAgency': '4D0',\n",
-       " 'from': '01/01/1998',\n",
-       " 'to': '01/03/2023',\n",
-       " 'dimensionsValues': [{'DimensionValue': {'code': 'FREQ', 'value': 'M'}},\n",
-       "  {'DimensionValue': {'code': 'REF_AREA', 'value': 'BE'}},\n",
-       "  {'DimensionValue': {'code': 'ADJUSTMENT', 'value': 'Y'}},\n",
-       "  {'DimensionValue': {'code': 'STS_CONCEPT', 'value': 'TOVV'}},\n",
-       "  {'DimensionValue': {'code': 'STS_CLASS', 'value': 'NS4701'}},\n",
-       "  {'DimensionValue': {'code': 'STS_INSTITUTION', 'value': '4'}},\n",
-       "  {'DimensionValue': {'code': 'STS_SUFFIX', 'value': '000'}}]}"
+       "{'httpCode': '429',\n",
+       " 'httpMessage': 'Too Many Requests',\n",
+       " 'moreInformation': 'Rate Limit exceeded'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sts_series = get_series_by_dataset_name(\"STS\")\n",
-    "sts_series[0]"
+    "sts_series"
    ]
   },
   {
