--- a/webstat-tsclustering/tsclustering/clustering.ipynb
+++ b/webstat-tsclustering/tsclustering/clustering.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/clem/Documents/source/sandbox/webstat-tsclustering/.venv/lib/python3.8/site-packages/tslearn/bases/bases.py:15: UserWarning: h5py not installed, hdf5 features will not be supported.\n",
+      "Install h5py to use hdf5 features: http://docs.h5py.org/\n",
+      "  warn(h5py_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import http.client\n",
@@ -28,11 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = pd.read_csv(\"final_df.csv\", index_col=0)"
+    "final_df = pd.read_csv(\"final_df.csv\", index_col=0)\n",
+    "final_df_wona = final_df.dropna(axis=1)\n",
+    "normalized_final_df = (final_df_wona - final_df_wona.mean()) / final_df_wona.std()"
    ]
   },
   {
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +67,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(517, 240, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train.shape # n_ts, max_sz, d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2: 0.34938194769965675\n",
+      "3: 0.26612659244609793\n",
+      "4: 0.25588602064105825\n",
+      "5: 0.27682811418614217\n",
+      "6: 0.2379344426483915\n"
+     ]
+    }
+   ],
    "source": [
     "for cluster_count in range(2, 7):\n",
     "    km = TimeSeriesKMeans(n_clusters=cluster_count, metric=\"dtw\", n_jobs=2, n_init=5)\n",
@@ -134,8 +169,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
