--- a/coding-test/coding_test/sql/sql_basics.ipynb
+++ b/coding-test/coding_test/sql/sql_basics.ipynb
@@ -22,20 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '/bin/python3' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from coding_test.sql_commons import DbConnection"
    ]
@@ -50,28 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_person_table = \"\"\"CREATE TABLE Persons (\n",
-    "ID int NOT NULL,\n",
-    "LastName varchar(255) NOT NULL,\n",
-    "FirstName varchar(255),\n",
-    "Age int CHECK (Age>=18)\n",
-    ");\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "with DbConnection() as db_connection:\n",
     "    con, cur = db_connection\n",
-    "    con.execute(create_person_table)"
+    "    con.execute(\"\"\"CREATE TABLE Persons (\n",
+    "ID INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "LastName varchar(255) NOT NULL,\n",
+    "FirstName varchar(255),\n",
+    "Age int CHECK (Age>=18)\n",
+    ");\"\"\")"
    ]
   },
   {
@@ -91,6 +70,156 @@
     "with DbConnection() as db_connection:\n",
     "    con, cur = db_connection\n",
     "    con.execute(\"CREATE TABLE movie(title, year, score)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Many to Many relationships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE Books (\n",
+    "ID INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "Title varchar(255) NOT NULL);\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE PersonBooks (\n",
+    "PersonID int NOT NULL,\n",
+    "BookID int NOT NULL,\n",
+    "\n",
+    "FOREIGN KEY(PersonID) REFERENCES Persons(ID),\n",
+    "FOREIGN KEY(BookID) REFERENCES Books(ID),\n",
+    "PRIMARY KEY (PersonID, BookID));\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"William\", \"Kruger\", 43),\n",
+    "    (\"John\", \"Proust\", 21)\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO Persons(LastName, FirstName, Age) VALUES(?, ?, ?)\", data)\n",
+    "    con.commit()  # Remember to commit the transaction after executing INSERT."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"Naked Statistics\",),\n",
+    "    (\"Data Literacy\",),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO Books(Title) VALUES(?)\", data)\n",
+    "    con.commit()  # Remember to commit the transaction after executing INSERT."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 'Data Literacy')\n",
+      "(1, 'William', 'Kruger', 43)\n",
+      "(2, 'John', 'Proust', 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\"SELECT * FROM Books\"):\n",
+    "        print(row)\n",
+    "\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\"SELECT * FROM Persons\"):\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (1, 1),\n",
+    "    (1, 2),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO PersonBooks VALUES(?, ?)\", data)\n",
+    "    con.commit()  # Remember to commit the transaction after executing INSERT."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1)\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\"SELECT * FROM PersonBooks\"):\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.execute(\"DELETE from Books where Title = 'Naked Statistics'\")\n",
+    "    con.commit()"
    ]
   },
   {
